--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <div class="profile">
         <img
           class="img-profile"
-          src="https://img-premium.flaticon.com/png/512/2202/premium/2202112.png?token=exp=1632483811~hmac=e84fd2de99a9715db412878b0ad9d6e0"
-          alt="picture-of-taras"
+          src="images/profile-img.png"
+          alt="profile-img"
         />
         <h2>Hello.</h2>
         <p>
@@ -45,8 +45,8 @@
         <h2>My Skills.</h2>
         <div class="skill-row">
           <img
-            class="img-computer"
-            src="https://img-premium.flaticon.com/png/512/186/premium/186225.png?token=exp=1632485677~hmac=619c50f17183582947dfa7ca1a41c42e"
+            class="img-code"
+            src="images/comp-coding.gif"
             alt="picture-of-computer"
           />
           <h3>HTML5 & CSS3</h3>
@@ -59,7 +59,7 @@
         <div class="skill-row">
           <img
             class="img-billiard"
-            src="https://cdn-icons-png.flaticon.com/512/3205/3205212.png"
+            src="images/img-billiard.png"
             alt="billiard-balls"
           />
           <h3>A big fan of billiard</h3>
