--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         />
         <h2>Hello.</h2>
         <p>
-          I'm studying Bachelor "Info- and Datamanagement" in Germany and
+          I'm studying Bachelor "Information- and Datamanagement" in Germany and
           learning how to code on my own. I specialize in Front-end Development.
         </p>
       </div>
